fixed gap between components

--- a/Strife/app/assets/stylesheets/api/global.scss
+++ b/Strife/app/assets/stylesheets/api/global.scss
@@ -98,7 +98,7 @@ label.field-error {
   position: absolute;
   width: calc(100vw - 310px);
   height: 100vh;
-  transform: translate(310px, 0px);
+  transform: translate(309px, 0px);
   background-color: #36393F;
   z-index: -1;
 }
